# DailyNotesCode

./: .gitignore  .gitmodules  README.md  install.py
CPP/: .gitignore
CPP/Base64/: main.cpp
Go/: go.mod  go.sum
Go/Chapter/ch10/ex10_1_expand_jpeg/: main.go
Go/Chapter/ch11/eval/: eval_test.go
Go/Chapter/ch11/ex11_1_test_charcount/: charcount.go  charcount_test.go
Go/Chapter/ch11/ex11_4/: palindromes_test.go
Go/Chapter/ch11/ex11_5_test_split/: split_test.go
Go/Chapter/ch11/word2/: word2_test.go
Go/Chapter/ch12_reflect/: reflect_sample.go
Go/Chapter/ch12_reflect/ch12_1_why_we_need_reflect/: main.go
Go/Chapter/ch12_reflect/ch12_2_reflect_type_value/: main.go
Go/Chapter/ch12_reflect/format/: format.go  format_test.go
Go/Chapter/ch4/ch4_6_text_html_template/: main.go
Go/Chapter/ch5/ch5_7_varing_params/: main.go
Go/Chapter/ch5/ch5_9_panic_exception/: mian.go
Go/Chapter/ch6/ch6_2_pointer_value/: main.go
Go/Chapter/ch6/ex6/: main.go
Go/Chapter/ch6/ex6_1/: main.go
Go/Chapter/ch7/ch7_10_type_assertion/: main.go
Go/Chapter/ch7/ch7_11_type_assertion_distinguish_error/: main.go
Go/Chapter/ch7/ch7_12_interrogate_behavior_through_type_assertion/: main.go
Go/Chapter/ch7/ch7_13_type_switch/: main.go
Go/Chapter/ch7/ch7_4_flag/: main.go
Go/Chapter/ch7/ch7_6_sort_interface/: main.go
Go/Chapter/ch8/: main.go
Go/Chapter/ch8/mutex/: main.go
Go/Chapter/ch9/atomic/: main.go
Go/Chapter/ch9/bank1/: main.go
Go/Chapter/ch9/ch9_5_sync_once/: main.go
Go/Chapter/ch9/ch9_6_race_dectector/: main.go
Go/Chapter/ch9/ex9_1_withdraw/: main.go
Go/Chapter/ch9/rwmutex/: main.go
Go/usecase/Nuclei/DIYTemplateAndTarget/: go.mod  go.sum  main.go  (+1 more)
Java/: switch_jdk_version.ps1
MSDev/MSGraph/: graph.py  main.py  pyproject.toml
MSDev/MSGraph/calendar/: sdk_test.py
Python/: .gitignore  README.md  config copy.toml  pyproject.toml
Python/Libs/igraph/: main.py
Python/Libs/pypsrp/latest_version/: latest_version.ipynb
Python/Libs/tldextract/: main.py
Python/Libs/whois/: main.py
Python/PrefectDemo/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py
Python/PrefectDemo/.activate-hooks/: .activate-hooks.bat  .activate-hooks.ps1  .activate-hooks.py  .activate-hooks.sh
Python/PrefectDemo/deployments/: deploy_flow.py  deployment.yaml  flow_deploy.py  flow_serve.py
Python/PrefectDemo/docker/: Dockerfile
Python/PrefectDemo/flows/: advanced_flow.py  basic_flow.py
Python/PrefectDemo/tasks/: data_tasks.py
Python/summer_modules/: .gitignore  SummerPythonModules.code-workspace  pyproject.toml
Python/summer_modules/summer_modules/: utils.py
Python/summer_modules/summer_modules/ai/: deepseek.py
Python/summer_modules/summer_modules/vulnerability/attck/: excel_operation.py
Python/summer_modules/summer_modules/vulnerability/cnnvd/: cnnvd.py  index.http  info.py
Python/summer_modules/summer_modules/vulnerability/cve/: __init__.py  info.py  poc.py
Python/summer_modules/summer_modules/vulnerability/github_repo/: nuclei.py
Python/summer_modules/tests/: test_main.py
Python/use_case/FileServer/FastAPI/: chunked_file_server.py  fileserver.py  pyproject.toml
Python/use_case/FileServer/FastAPI/templates/: chunked_file_server.html
Python/use_case/FileServer/SimpleHTTP/https_server/: .gitignore
Python/use_case/HTTPServer/general/: main.py  pyproject.toml
Python/use_case/HTTPServer/https-server/: generate_cert.sh  main.py  pyproject.toml
Python/use_case/TCPServer/: main.py
Python/use_case/TCPServer/TLSTCPServer/: client.py  main.py  pyproject.toml  server.crt  server.key
Python/use_case/account/password/random_password_generator/: .gitignore  main.py
Python/use_case/account/username/: main.py
Python/use_case/deepsleep/: mian.py  pyproject.toml
Python/use_case/excel/strip_cell/: strip_cell.py
Python/use_case/folo/: README.md  folo_opml_resolver.ps1  folo_opml_resolver.py  folo_opml_resolver.sh
Python/use_case/logger/: logger.py
Python/use_case/password/random_password_generator/: main.py
Python/use_case/pcap/: convert_every_pcap_to_every_json.py  convert_pcap2json.py  convert_pcaps2one_json.py
Python/use_case/picture/to_ico/: .gitignore  all_in_one.py  tauri_icon_generate.py
Python/use_case/rsshub/: config.toml.sample  generate_access_code.py
Python/use_case/time/: timestamp.py
Python/use_case/xmind2markdown/: main.py  pyproject.toml
Security/CodeAudit/CodeQL/: CodeQL.code-workspace
Security/ThreatIntelligence/OTX/PythonSDK/: config copy.toml  howto_use_python_otx_api.ipynb  pyproject.toml
Security/ThreatIntelligence/OTX/PythonSDK/exapmle/: reading_contents_from_otx.py
Security/ThreatIntelligence/OTX/PythonSDK/top_pulses/: .gitignore  get_top_pulses.py
Shell/Bash/起一个Screen运行脚本/: index.sh
install/: download_extract_zip.py  main.py  pyproject.toml  summerlog.py  sync_git_repo.py
(+82 files in other folders)
