[tool.poetry]
name = "summerpython"
version = "0.1.0"
description = ""
authors = ["233Mac <ayusummer233@vip.qq.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
openpyxl = "^3.1.5"
httpx = "^0.28.1"
summer_modules = {path = "./summer_modules", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
