[project]
name = "summerpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
]

[tool.uv.sources]
# 将本地 summer_modules 作为可编辑依赖（开发模式）
"summer-modules" = { path = "./summer_modules", editable = true }
