[project]
name = "summerpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "toml>=0.10.2",
    "summer-modules-core",
    "summer-modules-ai",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
]

[tool.uv.sources]
# 直接引用本地 summer_modules workspace 中的子包
summer-modules-core = { path = "summer_modules/packages/summer_modules_core", editable = true }
summer-modules-ai = { path = "summer_modules/packages/summer_modules_ai", editable = true }
