[tool.poetry]
name = "summer-modules"
version = "0.1.0"
description = "summery233 python modules"
authors = ["233Mac <ayusummer233@vip.qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.1"
bs4 = "^0.0.2"
toml = "^0.10.2"
openai = "^1.66.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
