[tool.poetry]
name = "deepsleep"
version = "0.1.0"
description = ""
authors = ["233Mac <ayusummer233@vip.qq.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10 <3.14"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
