[tool.poetry]
name = "fastapifileserver"
version = "0.1.0"
description = ""
authors = ["233PC <ayusummer233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
