[tool.poetry]
name = "\\"
version = "0.1.0"
description = ""
authors = ["233Mac <ayusummer233@vip.qq.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
otxv2 = "^1.5.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
